k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-arch-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8989
      protocol: TCP
  selector:
    app: multi-arch-demo
